# usbemu

./: .travis.yml  Makefile.am  autogen.sh  configure.ac  travis.sh  usbemu.pc.in
docs/reference/: Makefile.am  usbemu-docs.xml
plugins/usbip/: usbip-list.c  usbip.c
src/: usbemu-dbus-device-object.c  usbemu-dbus-device-object.h  usbemu-dbus-manager-object.c  usbemu-dbus-manager-object.h  usbemu-manager.c  usbemu-manager.h  usbemu-usbip-server.c  usbemu-usbip-server.h  usbemu.c  usbemud.c
src/usbip/: usbip-dbus.c  usbip-list.c  usbip.h
tests/: test-object.c  test-object.h  test-usbemu-configuration.c  test-usbemu-device.c  test-usbemu-enums.c  test-usbemu-error.c  test-usbemu-interface.c  test-usbemu-internal-utils.c  test-usbemu-internal.c
usbemu/: usbemu-configuration.c  usbemu-configuration.h  usbemu-device.c  usbemu-device.h  usbemu-enums.c.template  usbemu-enums.h.template  usbemu-errors.c  usbemu-errors.c.template  usbemu-errors.h  usbemu-interface.c  usbemu-interface.h  usbemu-internal.c  usbemu-internal.h  usbemu-manager.c  usbemu-manager.h  usbemu-urb.c  usbemu-urb.h  usbemu-usb.h  usbemu-vhci-device.c  usbemu-vhci-device.h  usbemu.h
usbemu/dbus/: usbemu-dbus-device.xml  usbemu-dbus-manager.xml  usbemu-dbus-object-manager.c  usbemu-dbus-object-manager.h
usbemu/internal/: types.h  usbip.c  usbip.h  utils.c  utils.h  vhci.c  vhci.h
